# ocap

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
owa/ocap/: recorder.py  utils.py
scripts/: README.md  release.py
tests/: conftest.py  test_integration.py  test_performance.py  test_recorder.py  test_utils.py
